--- a/style.css
+++ b/style.css
@@ -48,6 +48,10 @@ nav{
     text-decoration: underline 2.5px solid #FFB400;
   }
 
+  .mother .open, .mother .close {
+    display: none;
+  }
+
 .main-container{
     display: flex;
     justify-content: space-around;
@@ -414,6 +418,10 @@ span{
       margin-bottom: 5rem;
       display: block;
     }
+
+    .mother .open, .mother .close {
+      display: none;
+    }
     .second-container {
       text-align: center;
     }
@@ -480,11 +488,142 @@ span{
 
   }
 
-  @media screen and (max-width: 375px){
+  @media screen and (max-width: 420px) and (min-width: 280px){
     nav{
       display: none;
     }
+
+    .mother .open, .mother .close {
+      display: flex;
+    }
     .mother{
-    
+      display: block;
+      width: 100%;
+      height: 100%;
+    }
+
+    .second-container{
+      margin-top: -7rem;
+    }
+
+    .second-container h1{
+      text-align: center;
+      width: 100%;
+      height: 80px;
+      font-size: 28px;
+    }
+
+    .third-container{
+      margin-top: 2rem;
+      width: 100%;
+      text-align: center;
+      height: 100%;
+    }
+
+    .image img{
+      width: 100%;
+    }
+
+  
+    #Service h3{
+      width: 100%;
+      /* text-align: center; */
+    }
+
+    #grid-container{
+      display: grid;
+      grid-template-rows: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+      gap: 15px;
+      /* width: 250px; */
+      margin-top: 4rem;
+    }
+
+    .grid-item{
+      width: 100px;
+      /* height: 100%; */
+    }
+
+    #About{
+      position: relative;
+      top: 40rem;
+    }
+
+    #school-work{
+      display: block;
+      row-gap: 10px;
+      width: 100%;
+      height: 100%;
+    }
+
+    .education-section, .work-section{
+      text-align: center;
+      width: 100%;
+      margin-top: 5rem;
+    }
+
+    .education-container{
+      gap: 15px;
+    }
+
+    .container{
+      display: block;
+      height: 100%;
+      /* margin-top: 5rem; */
+      margin-bottom: 3rem;
+    }
+
+    .left{
+      text-align: center;
+      margin: 0 auto;
+      padding-top: 2rem;
+    }
+
+    .left h3{
+      margin: 0 auto;
+    }
+
+    .right{
+      text-align: center;
+      margin: 0 auto;
+      width: 100%;
+    }
+
+    .right h4{
+      text-align: center;
+      margin: 0 auto;
+      padding-top: 4rem;
+      width: 100%;
+    }
+
+    #school{
+      margin-top: 5rem;
+      
+    }
+
+    .field{
+      margin-top: 40rem;
+    }
+
+    .info{
+      text-align: center;
+      width: 100%;
+    }
+
+    picture{
+      display: grid;
+      grid-template-rows: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+      gap: 15px;
+      align-items: center;
+    }
+
+    picture img{
+      width: 100%;
+      height: 100px;
+    }
+
+    footer{
+      width: 100%;
     }
   }
